# usd-mpcdi-plugin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  api.h  iMpcdiDataProvider.cpp  iMpcdiDataProvider.h  mpcdiData.cpp  mpcdiData.h  mpcdiDataProviderFactory.cpp  mpcdiDataProviderFactory.h  mpcdiFileFormat.cpp  mpcdiFileFormat.h  mpcdiPluginManager.cpp  mpcdiPluginManager.h  plugInfo.json
